--- a/src/main/latex/tex/Correlation_And_Causation_Analysis_v1_0_0/main.tex
+++ b/src/main/latex/tex/Correlation_And_Causation_Analysis_v1_0_0/main.tex
@@ -5,6 +5,7 @@
 \usepackage{subfigure}
 \usepackage{ulem}
 \usepackage{amsmath}
+\usepackage{afterpage}
 \allowdisplaybreaks
 \usepackage{hhline}
 \usepackage{yfonts,color}
@@ -61,15 +62,15 @@
 \section{System Model}
 \begin{itemize}
     \item $M \triangleq $ The number of training examples, $M \in \mathbb{Z}_{++}$
-    \item $f$ is a trained Deep Neural Network based classifier defined as $f: \mathcal{X} \rightarrow \mathcal{Y}$
+    \item $f$ is a trained \textbf{Deep Neural Networks based Classifier} defined as $f: \mathcal{X} \rightarrow \mathcal{Y}$
     \item $\mathcal{X}$ is the input feature space, $\mathcal{X} \in \mathbb{R}^{K}$
     \item $\mathcal{Y}$ is the output label space, $\mathcal{Y} \in \{0,\ 1\}$
-    \item The Deep Neural Network based classifier is a black box to this prediction rationale determination operation and hence, we do not care about the hyper-parameters of the Neural Network.
-    \item Let $(\vec{x} \in \mathcal{X},\ y \in \mathcal{Y})$ be a prediction instance that needs to be explained by the proposed rationale determination engine. 
+    \item The Deep Neural Networks based Classifier is a black box to this prediction rationale determination operation and hence, we do not care about the hyper-parameters of this Neural Network.
+    \item Let $p(\vec{x}^{(p)},\ y^{(p)}) = (\vec{x} \in \mathcal{X},\ y \in \mathcal{Y})$ be a prediction instance that needs to be explained by the proposed rationale determination engine. 
     \item $\kappa \leq K\ \triangleq $ The number of interpretable features in the prediction rationale
-    \item Let $\vec{z} \in \mathcal{Z}$ be a perturbed instance sampled from the non-zero components (categorical or numerical ) of $\vec{x} \in (\vec{x} \in \mathcal{X},\ y \in \mathcal{Y})$ where $\mathcal{Z}$ represents the sparse, interpretable feature space.
+    \item Let $\vec{z} \in \mathcal{Z}$ be a perturbed instance sampled from the non-zero components (categorical or numerical) of $\vec{x}^{(p)}$ where $\mathcal{Z}$ represents the sparse, interpretable feature space.
     \item $N \triangleq $ The number of perturbed instances sampled for prediction rationale determination, $N < M$
-    \item $Z \equiv \{\vec{z}_i \in \mathcal{Z} | i \in \{1, 2, \dots, N\}\}$ is the set of all perturbed instances sampled uniformly at random from the non-zero components of \\ $\vec{x} \in (\vec{x} \in \mathcal{X},\ y \in \mathcal{Y})$
+    \item $Z \equiv \{\vec{z}_i \in \mathcal{Z}\ |\ i \in \{1, 2, \dots, N\}\}$ is the set of all perturbed instances sampled uniformly at random from the non-zero components of \\ $p(\vec{x}^{(p)},\ y^{(p)}) = (\vec{x} \in \mathcal{X},\ y \in \mathcal{Y})$
 \end{itemize}
 \section{State-of-the-art}
 \begin{itemize}
@@ -78,25 +79,25 @@
     \item M. Ribeiro, et. al., ``\href{https://www.kdd.org/kdd2016/papers/files/rfp0573-ribeiroA.pdf}{\textcolor{blue}{ “Why Should I Trust You?” Explaining the Predictions of Any Classifier}}", 2016
 \end{itemize}
 \section{Rationale Engine Design}
-The intuition is to fit a locally interpretable regression model in the neighbourhood of the sample prediction instance and use this model to explain the rationale behind that specific prediction. We can fit a Linear Model or build a Random Forests based Model from the sampled and perturbed set of interpretable feature vectors - in this paper, we stick to a linear model.
+The intuition is to \textbf{fit a spatial correlation based weighted locally interpretable regression model in the neighbourhood of the sample prediction instance} (localized weighted curve fitting) and use this model to explain the rationale behind that specific prediction. We can fit a Linear Model or build a Random Forests based Model from the sampled and perturbed set of interpretable feature vectors: in this paper, we stick to a linear model.
 \subsection{The Sparse Linear Locally Interpretable Model}
 Here are a few design points relevant to the linear model fit in the vicinity of the sample prediction instance.
 \begin{itemize}
     \item Model: $g(\vec{z}) = \vec{\theta}^\intercal \vec{z} + \phi$
     \item Exponential Kernel Weights:
     \begin{equation}\label{1}
-        e_{\vec{x}}(\vec{z}) = e^{\frac{D'(\vec{x}, \vec{z})^2}{\sigma^2}},
+        e_{\vec{x}}(\vec{z}) = e^{\frac{D'(\vec{x}, \vec{z})^2}{\sigma^2}}
     \end{equation}
-    where
+    where,
     \begin{equation}\label{2}
-        D'(\vec{x}, \vec{z}) \triangleq \text{Cosine Similarity} = \Big(\frac{\vec{x} \cdot \vec{z}}{||\vec{x}||_2 ||\vec{z}||_2}\Big),
+        D'(\vec{x}, \vec{z}) \triangleq \text{Cosine Similarity} = \Big(\frac{\vec{x} \cdot \vec{z}}{||\vec{x}||_2 ||\vec{z}||_2}\Big)
     \end{equation}
     \[\sigma^2 \triangleq \text{The width of the kernel}\]
     \item Cost function:
     \begin{equation}\label{3}
         f_0(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ (y_i - \vec{\theta}^\intercal \vec{z} - \phi)^2
     \end{equation}
-    \item The regularization condition modelled as an inequality constraint:
+    \item The regularization condition is modelled as an inequality constraint:
     \begin{equation}\label{4}
         \sum_{k=1}^{\kappa}\ |\theta_k| \leq \alpha,
     \end{equation}
@@ -124,41 +125,41 @@ In other words,
 Finally, let's add the exponential kernel coefficient as a neighbourhood weight to equation \eqref{7} and re-write the optimization problem as,
 \begin{equation}\label{8}
     \begin{aligned}
-        \vec{\theta}^{*} = \argmin_{\vec{\theta}}\ \Big\{\frac{1}{N} \sum_{i=1}^N\ e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z})^2\Big\},\\
+        \vec{\theta}^{*} = \argmin_{\vec{\theta}}\ \Big\{\frac{1}{N} \sum_{i=1}^N\ \Big(e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z})^2\Big)\Big\},\\
         \text{such that, } ||\vec{\theta}||_{1} \leq \alpha.
     \end{aligned}
 \end{equation}
 \subsection{Problem Solution}
 The optimization problem detailed in equation \eqref{8} is a standard convex optimization problem due to the following reasons:
 \begin{itemize}
-    \item The inequality constraint encapsulates a feasible set defined as \[\mathcal{F} \equiv \{\vec{\theta} \in \mathbb{R}^{\kappa} | \textbf{1}^\intercal \vec{\theta} \leq \alpha\}.\] The feasible set $\mathcal{F}$ is a convex set because it is a half-space and all half-spaces are convex sets.
+    \item The inequality constraint encapsulates a feasible set defined as \[\mathcal{F} \equiv \{\vec{\theta} \in \mathbb{R}^{\kappa}\ |\ \textbf{1}^\intercal \vec{\theta} \leq \alpha\}.\] The feasible set $\mathcal{F}$ is a convex set because it is a half-space and all half-spaces are convex sets.
     \item The objective function,
-    \[f_0(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z})^2,\] is a convex function due to the following reasons:
+    \[f_0(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ \Big(e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z})^2\Big),\] is a convex function due to the following reasons:
     \begin{itemize}
         \item The domain of the function denoted by $dom(f_0) \equiv \mathbb{R}^{\kappa}$ is a convex set.
         \item The objective function can be re-written as follows.
         \\Pushing the weight in, we get,
-        \[f_0(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ ((e_{\vec{x}}(\vec{z}_i))^2 y_{i} - (e_{\vec{x}}(\vec{z}_i))^2 \vec{\theta}^\intercal \vec{z})^2\]
+        \[f_0(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ \Big\{\Big((e_{\vec{x}}(\vec{z}_i))^{\frac{1}{2}} y_{i} - (e_{\vec{x}}(\vec{z}_i))^{\frac{1}{2}} \vec{\theta}^\intercal \vec{z}\Big)^2\Big\}\]
         \[f_0(\vec{\theta}) = \frac{1}{N} ||\vec{y}' - A'\vec{\theta}||_2^{2}\]
         where,
-        \[\vec{y}' = [(e_{\vec{x}}(\vec{z}_i))^2 y_i | i \in \{1, 2, \dots, N\}]^\intercal\]
-        \[A' = [(e_{\vec{x}}(\vec{z}_i))^2 z_{ij}],\ \forall i \in \{1, 2, \dots, N\}\ \text{and}\ j \in \{1, 2, \dots, \kappa\}\]
-        The L2-norm operation of a vector $(h(.) = ||.||_2)$ is convex because of the properties imbibed by the Triangle Inequality as explained below. Please note that this holds true for any $p-norm,\ p \in \mathbb{Z}_{++},\ p \geq 1$.
+        \[\vec{y}' = [(e_{\vec{x}}(\vec{z}_i))^{\frac{1}{2}} y_i\ |\ i \in \{1, 2, \dots, N\}]^\intercal\]
+        \[A' = [(e_{\vec{x}}(\vec{z}_i))^{\frac{1}{2}} z_{ij}],\ \forall i \in \{1, 2, \dots, N\}\ \text{and}\ j \in \{1, 2, \dots, \kappa\}\]
+        The L2-norm operation of a vector $(h(.) = ||.||_2)$ is convex because of the properties imbibed to it by the Triangle Inequality as explained below. Please note that this holds true for any $p-norm,\ p \in \mathbb{Z}_{++},\ p \geq 1$.
         For $0 \leq \beta \leq 1$ and for any $\vec{x}, \vec{y} \in dom(g)$,
         \[||\beta \vec{x} + \Bar{\beta} \vec{y}||_p \leq ||\beta \vec{x}||_p + ||\Bar{\beta} \vec{y}||_p\]
         \[||\beta \vec{x} + \Bar{\beta} \vec{y}||_p \leq \beta||\vec{x}||_p + \Bar{\beta}||\vec{y}||_p\]
         This satisfies the Jensen's inequality requirement for convexity of functions, i.e.,
         \[h(\beta \vec{x} + \Bar{\beta} \vec{y}) \leq \beta h(\vec{x}) + \Bar{\beta} h(\vec{y})\]
         Furthermore, the norm-square operation in the objective function is convex due to the composition of functions. More details are given below.
-        For any $\vec{x}, \vec{y} \in dom(h) \cap dom(l)$ where $h(.)$ denotes the norm function and $l(.)$ denotes the square function, we can write,
+        \\For any $\vec{x}, \vec{y} \in dom(h) \cap dom(l)$ where $h(.)$ denotes the norm function and $l(.)$ denotes the square function, we can write,
         \[l(h(\beta \vec{x} + \Bar{\beta} \vec{y})) \leq l(\beta h(\vec{x}) + \Bar{\beta} h(\vec{y})) \leq \beta l(h(\vec{x})) + \Bar{\beta} l(h(\vec{y}))\]
         Finally, the affine transformation of a convex function (norm-square of a vector) is a convex function.
-        \\Therefore, the cost function minimization performed within the locally interpretable regression model is a convex optimization problem.
+        \\Therefore, the cost function minimization performed as a part of the prediction rationale determination operation is a convex optimization problem.
     \end{itemize}
     \item Now that we have a constrained convex optimization problem on our hands, we can use Projection Gradient Descent to solve for the optimal parameters ($\vec{\theta}$) in the locally interpretable linear model.
 \end{itemize}
 \subsection{The Algorithm}
-The optimization algorithm is detailed below. Note that \textbf{Algorithm 1} is just an optimization algorithm used to determine the weights of the numerous constructed locally interpretable models. The fully integrated causation analysis algorithm is detailed in \textbf{Algorithm 2}.
+The optimization algorithm is detailed below. Note that \textbf{Algorithm 1} is just an optimization algorithm used to determine the individual weights of the numerous constructed locally interpretable models. The fully integrated causation analysis algorithm is detailed in \textbf{Algorithm 2}.
 \begin{algorithm}[H]
 \SetAlgoLined
 \textbf{Initialization}: Pick an initial point $\vec{\theta}_0 \in \mathcal{F}$;
@@ -176,18 +177,19 @@ The projection of $\vec{a}$ along $\vec{b}$ is then given by,
 \[\vec{a}_b\ =\ a_b \frac{\vec{b}}{||\vec{b}||}\]
 Taking the collection of line segments constituting the boundary of the feasible set, we find the \textit{<smallest\_distance, closest\_point>} pair for the out-of-bounds point with respect to each of these line segments and then find the smallest distance among them. The point corresponding to the smallest distance among all the line segments is the projection of the out-of-bounds point in the feasible set.
 \\The final, integrated causation determination algorithm is outlined below.
+\newpage
 \begin{algorithm}[H]
 \SetAlgoLined
-Build, Compile, and Train a Neural Networks based Classifier $f: \mathcal{X} \rightarrow \mathcal{Y}$;\\
+Build, Compile, and Train a Deep Neural Networks based Classifier $f: \mathcal{X} \rightarrow \mathcal{Y}$;\\
 Predict a sample case from the test data and call it a \textit{prediction rationale instance} $p(\vec{x}^{(p)}, y^{(p)})$;\\
-Now, the task at hand is to explain/interpret the prediction made by the NN-Classification engine;\\
-Based on the hyper-parameters $N$=the number of perturbed samples and $\kappa$=the number of features in the interpretable model, create perturbed samples $\vec{z}_i,\ \forall i \in \{1, 2, \dots, N\}$ by sampling $\kappa$ random features of the prediction rationale instance $p$'s feature vector $\vec{x}^{(p)}$:\\
-samplesCollection = $[]$;\\
+Now, the task at hand is to explain/interpret the prediction made by the Deep Neural Networks based Classification engine;\\
+Based on the hyper-parameters $N$ (the number of perturbed samples) and $\kappa$ (the number of features in the interpretable model), create perturbed samples $\vec{z}_i,\ \forall i \in \{1, 2, \dots, N\}$ by sampling $\kappa$ random features of the prediction rationale instance $p$'s feature vector $\vec{x}^{(p)}$:\\
+samplesCollection = $[\ ]$;\\
 $j = 0$;\\
 for all possible $\kappa$-feature combinations, i.e. \While{$j < \binom{K}{\kappa}$}
 {
     $i = 0$;\\
-    samples = $[]$;\\
+    samples = $[\ ]$;\\
     \While{$i < N$}
     {
         Perturbed sample $\vec{z}_i$ = randomly sample $(x_1, x_2, \dots, x_{\kappa})_j$ components of the prediction rationale instance's feature vector $\vec{x}^{(p)}$;\\
@@ -196,12 +198,14 @@ for all possible $\kappa$-feature combinations, i.e. \While{$j < \binom{K}{\kapp
         $D'(\vec{x}^{(p)}, \vec{z}_i) = \frac{\vec{x}^{(p)} \cdot \vec{z}_i}{||\vec{x}^{(p)}||_2 ||\vec{z}_i||_2}$;\\
         Evaluate the weight (exponential kernel) of this perturbed sample - \\
         $e_{\vec{x}^{(p)}}(\vec{z}_i) = \exp({\frac{D'(\vec{x}^{(p)}, \vec{z}_i)^2}{\sigma^2}})$;\\
-        Determine the prediction made by the classifier for this perturbed sample - $y_{\vec{z}_i} = f(\vec{z}_i)$;\\
-        $\text{samples}[i] = (\vec{z}_i, \vec{z}'_i, e_{\vec{x}^{(p)}}(\vec{z}_i), y_{\vec{z}_i})$;
+        Determine the prediction made by the classifier for this perturbed sample: $y_{\vec{z}_i} = f(\vec{z}_i)$;\\
+        $\text{samples}[i] = (\vec{z}_i, \vec{z}'_i, e_{\vec{x}^{(p)}}(\vec{z}_i), y_{\vec{z}_i})$;\\
+        i += 1;
     }
     $\text{samplesCollection}[j] = \text{samples}$;\\
+    j += 1;
 }
-evaluationResults = $[]$;\\
+evaluationResults = $[\ ]$;\\
 $j = 0$;\\
 for samples in samplesCollection, i.e. \While{$j < \binom{K}{\kappa}$}
 {
@@ -209,7 +213,7 @@ for samples in samplesCollection, i.e. \While{$j < \binom{K}{\kappa}$}
     {
         \textbf{Initialization}: Pick an initial point $\vec{\theta}_0 \in \mathcal{F}$;
         \\Pick a step-size, $\gamma\ =\ 0.1$;\\
-        $f_0^{j}(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ \Big(e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z})^2\Big)$;\\
+        $f_0^{j}(\vec{\theta}) = \frac{1}{N} \sum_{i=1}^N\ \Big(e_{\vec{x}}(\vec{z}_i)\ (y_i - \vec{\theta}^\intercal \vec{z}_i')^2\Big)$;\\
         \While{$\vec{\theta}^{j}_{t+1}\ !=\ [\vec{\theta}^{j}_t - \gamma \triangledown f_0^{j}(\vec{\theta}^{j}_t)]^+$}
         {
             $\vec{\theta}^{j}_{t+1}\ =\ [\vec{\theta}^{j}_t - \gamma \triangledown f_0(\vec{\theta}^{j}_t)]^+$\;
@@ -217,7 +221,8 @@ for samples in samplesCollection, i.e. \While{$j < \binom{K}{\kappa}$}
         \textbf{Optimized Result}: evaluationResults$[j]$ = $(\vec{\theta}^{j*}, f_0(\vec{\theta}^{j*}))$;
     }
 }
-\textbf{Output}: Causation for the prediction rationale instance - \\ $Causation(p(\vec{x}^{(p)}, y^{(p)}))$ = $\min(\text{evaluationResults},\ \textbf{lambda}\ x:\ x[1])[0]$;
+\textbf{Output}: Causation for the prediction rationale instance - \\ $Causation\{p(\vec{x}^{(p)}, y^{(p)})\}$ = $\min(\text{evaluationResults},\ \textbf{lambda}\ x:\ x[1])[0]$;
 \caption{Integrated Causation Determination Algorithm}
 \end{algorithm}
+\thispagestyle{empty}
 \end{document}
