Aesthetic updates to the LaTeX documents

--- a/src/main/latex/tex/Adaptive_Buffer_Allocation_In_Switches_v1_0_0/main.tex
+++ b/src/main/latex/tex/Adaptive_Buffer_Allocation_In_Switches_v1_0_0/main.tex
@@ -147,7 +147,7 @@ where, $a_{ij}$ corresponds to $\Delta s$ where, $\Delta s$ corresponds to a cha
     \item S. Ioffe and C. Szegedy,
     ``\href{https://arxiv.org/pdf/1502.03167.pdf}{\textcolor{blue}{Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}}", March 2015\label{7}
     \item V. Mnih, et. al.,
-    ``\href{https://arxiv.org/pdf/1312.5602.pdf}{\textcolor{blue}{Playing Atari with Deep Reinforcement Learning}}, December 2013\label{8}
+    ``\href{https://arxiv.org/pdf/1312.5602.pdf}{\textcolor{blue}{Playing Atari with Deep Reinforcement Learning}}", December 2013\label{8}
     \item D. Bertsekas, ``\href{http://web.mit.edu/dimitrib/www/dpchapter.html}{\textcolor{blue}{Dynamic Programming and Optimal Control - Volumes 1 and 2}}", 2012\label{9}
     \item L. Ornstein and G. Uhlenbeck,
     ``\href{https://journals.aps.org/pr/abstract/10.1103/PhysRev.36.823}{\textcolor{blue}{On the Theory of the Brownian Motion}}", September 1930\label{10}
